@@ -46,6 +46,11 @@ value=false
 type=bool
 value=true
 
+[Browser/EnableGeolocation]
+type=enumeration
+value=ask
+choices=ask,allow,disallow
+
 [Browser/EnableImages]
 type=bool
 value=true
@@ -61,6 +66,21 @@ value=true
 [Browser/EnableLocalStorage]
 type=bool
 value=true
+
+[Browser/EnableMediaCaptureAudio]
+type=enumeration
+value=ask
+choices=ask,allow,disallow
+
+[Browser/EnableMediaCaptureVideo]
+type=enumeration
+value=ask
+choices=ask,allow,disallow
+
+[Browser/EnableNotifications]
+type=enumeration
+value=ask
+choices=ask,allow,disallow
 
 [Browser/EnableOfflineStorageDatabase]
 type=bool
